Bug 148518 - FILEOPEN RTF Dropdown field does not read all items
Summary: FILEOPEN RTF Dropdown field does not read all items
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords: implementationError
Depends on:
Blocks: RTF RTF-Fields
  Show dependency treegraph
 
Reported: 2022-04-11 14:59 UTC by Gabor Kelemen (Collabora)
Modified: 2022-08-09 21:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2013 (38.58 KB, application/msword)
2022-04-11 14:59 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word and Writer master (84.18 KB, image/png)
2022-04-11 19:32 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-04-11 14:59:02 UTC
Created attachment 179469 [details]
Example file from Word 2013

Attached document contains a Dropdown form field with 3 possible values set in Word: x, v, d.
When opened in Writer only the d is there.

1, Open attached file
2, Click into the Dropdown list (do not double click, as it would crash)
3, Select Forms - Control Properties

The Drop-down Form Field dialog displays only the "d" item in the list, "x" and "v" are gone. 
Word shows all 3 letters with "x" selected as default when the file is opened.

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cf4d5ed026c8799a70432a832a8a707c2e316216
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded Jumbo

The field started to be imported in 6.3, already with only 1 item. Before it was not imported at all.
Comment 1 Xisco Faulí 2022-04-11 15:03:11 UTC
Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b812150696c574aea0a173d11f178e8d458b1a3e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Gabor Kelemen (Collabora) 2022-04-11 19:32:49 UTC
Created attachment 179474 [details]
The example file in Word and Writer master
Comment 3 Commit Notification 2022-08-08 13:50:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47b08551a77918e4d35a98197ac99c1c3d5dec73

tdf#148518 writerfilter,sw: RTF import/export of FORMDROPDOWN field

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2022-08-08 18:06:02 UTC
fixed on master
Comment 5 Commit Notification 2022-08-09 07:47:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/07e20e619919114def34ddc4d6241b1f891c443b

tdf#148518 writerfilter,sw: RTF import/export of FORMDROPDOWN field

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2022-08-09 21:37:51 UTC
Verified on

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 1052ec9cff72e2810fdb934a85ab500d3b4ace35
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: x11
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

The dropdown works as expected upon opening, also after resaving and in Word as well.
The checkbox is still losing its checked state, it is also invisible (in checked or unchecked format) in Word - see bug 148524.