tdf#148518 writerfilter,sw: RTF import/export of FORMDROPDOWN field

On import, the values overwrote each other; export of the form data
was missing completely.

Change-Id: I918b3cfced39dc2602c6de03cdaf5848a9825dd2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137861
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>