writerfilter/source/dmapper/FormControlHelper.cxx
@@ -34,6 +34,8 @@
 #include <com/sun/star/text/VertOrientation.hpp>
 #include <com/sun/star/uno/Any.hxx>
 
+#include <o3tl/safeint.hxx>
+
 #include "FormControlHelper.hxx"
 #include <utility>
 #include <xmloff/odffields.hxx>
@@ -286,7 +288,8 @@ void FormControlHelper::processField(uno::Reference<text::XFormField> const& xFo
                 xNameCont->insertByName(ODF_FORMDROPDOWN_LISTENTRY, uno::Any(comphelper::containerToSequence(rEntries)));
 
             sal_Int32 nResult = m_pFFData->getDropDownResult().toInt32();
-            if ( nResult )
+            // 0 is valid, but also how toInt32 reports parse error, but it's a sensible default...
+            if (0 <= nResult && o3tl::make_unsigned(nResult) < rEntries.size())
             {
                 if ( xNameCont->hasByName(ODF_FORMDROPDOWN_RESULT) )
                     xNameCont->replaceByName(ODF_FORMDROPDOWN_RESULT, uno::Any( nResult ) );
